--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
 
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="javascripts/main.js"></script>
+  <script src="javascripts/IIFE.js"></script>
+  <script src="javascripts/AugmentedIIFE.js"></script>
+
+
 </body>
 </html>
